--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "precompile": "rimraf app/**/*.js test/**/*.js",
     "compile": "tsc",
     "pretest": "rimraf app/**/*.js test/**/*.js",
-    "test": "nyc mocha"
+    "test": "nyc mocha",
+    "compile:dev": "tsc app/*.ts --watch",
+    "test:dev": "mocha --watch-extensions ts --watch",
+    "start:dev": "nodemon app/gilded-rose.js"
   },
   "license": "MIT",
   "private": true,
@@ -16,6 +19,7 @@
     "@types/node": "~7.0.18",
     "chai": "~3.5.0",
     "mocha": "~3.2.0",
+    "nodemon": "^1.18.11",
     "nyc": "~11.0.3",
     "rimraf": "~2.5.2",
     "source-map-support": "0.5.9",
@@ -39,4 +43,3 @@
     ]
   }
 }
-
